# victus-ruby-server/swagger/v1/swagger.yaml
@@ -118,6 +118,12 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/habit_category"
+        '404':
+          description: Category not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error"
         '422':
           description: Validation error
           content:
@@ -486,6 +492,12 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/habit"
+        '404':
+          description: Habit not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error"
         '422':
           description: Validation error
           content:
@@ -775,6 +787,12 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/mood"
+        '404':
+          description: Mood not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error"
         '422':
           description: Edit window expired
           content:
@@ -997,8 +1015,12 @@ paths:
                     type: string
                   url:
                     type: string
-                  test:
-                    type: object
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error"
         '422':
           description: Missing lookup key
           content:
